--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/node": "^22.7.4",
+    "antd": "^5.21.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
